Update responses
